cmake_minimum_required(VERSION 3.24)
project(PizzaPanic)

set(CMAKE_CXX_STANDARD 17)
set(SOURCE_FILES main.cpp array.cpp Game.cpp MainMenu.cpp Pets.cpp Player.cpp TileMap.cpp)
add_executable(PizzaPanic ${SOURCE_FILES})
include_directories(/usr/local/include)
find_package(SFML 2.5.1 COMPONENTS system window graphics network audio REQUIRED)
include_directories(${SFML_INCLUDE_DIRS})
target_link_libraries(PizzaPanic sfml-system sfml-window sfml-graphics sfml-audio sfml-network)